--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build --target lib --name main",
+    "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "@nextcloud/axios": "^1.6.0",
+    "@nextcloud/initial-state": "^1.2.1",
+    "@nextcloud/moment": "^1.1.1",
     "@nextcloud/router": "^2.0.0",
+    "@nextcloud/vue": "^3.10.2",
+    "@nextcloud/vue-dashboard": "^2.0.1",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
