--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nextcloud/vue-dashboard": "^2.0.1",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
+    "form-data": "^2.3.3",
     "vue": "^2.6.11",
     "vue-trix": "^1.2.0",
     "vuex": "^3.6.2"
