--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "core-js": "^3.6.5",
     "form-data": "^2.3.3",
     "vue": "^2.6.11",
+    "vue-sortable": "^0.1.3",
     "vue-trix": "^1.2.0",
     "vuex": "^3.6.2"
   },
