--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
     "form-data": "^2.3.3",
+    "intro.js": "^2.9.3",
     "vue": "^2.6.11",
+    "vue-introjs": "^1.3.2",
     "vue-trix": "^1.2.0",
     "vuedraggable": "^2.24.3",
     "vuex": "^3.6.2"
