--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "module": "^1.2.5",
     "readline": "^1.3.0",
     "vue": "^2.6.11",
+    "vue-easy-lightbox": "^0.18.0",
     "vue-trix": "^1.2.0",
     "vuedraggable": "^2.24.3",
     "vuex": "^3.6.2"
