--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@mdi/font": "^7.0.96",
     "@nextcloud/axios": "^1.6.0",
     "@nextcloud/initial-state": "^1.2.1",
     "@nextcloud/moment": "^1.1.1",
