--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "intranetagglo",
-  "version": "1.0.0",
+  "name": "intranetagglov2",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -8,33 +8,37 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@mdi/font": "^7.0.96",
+    "@nextcloud/auth": "^1.3.0",
     "@nextcloud/axios": "^1.6.0",
     "@nextcloud/initial-state": "^1.2.1",
-    "@nextcloud/moment": "^1.1.1",
+    "@nextcloud/moment": "^1.2.1",
     "@nextcloud/router": "^2.0.0",
-    "@nextcloud/vue": "^3.10.2",
+    "@nextcloud/vue": "^6.0.0-beta.3",
     "@nextcloud/vue-dashboard": "^2.0.1",
-    "bootstrap-vue": "^2.21.2",
+    "axios": "^0.27.2",
     "core-js": "^3.6.5",
-    "form-data": "^2.3.3",
-    "intro.js": "5.1.0",
-    "module": "^1.2.5",
-    "readline": "^1.3.0",
+    "form-data": "^4.0.0",
+    "intro.js": "^6.0.0",
+    "moment": "^2.29.4",
     "vue": "^2.6.11",
-    "vue-easy-lightbox": "^0.18.0",
-    "vue-trix": "^1.2.0",
+    "vue-easy-lightbox": "^0.19.0",
+    "vue2-editor": "^2.10.3",
     "vuedraggable": "^2.24.3",
-    "vuex": "^3.6.2"
+    "vuetify": "^2.6.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
+    "@mdi/font": "^7.0.96",
+    "@vue/cli-plugin-babel": "~4.5.13",
+    "@vue/cli-plugin-eslint": "~4.5.13",
+    "@vue/cli-service": "~4.5.13",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.11"
+    "sass": "~1.32.0",
+    "sass-loader": "^10.0.0",
+    "vue-cli-plugin-vuetify": "~2.5.1",
+    "vue-template-compiler": "^2.6.11",
+    "vuetify-loader": "^1.7.0"
   },
   "eslintConfig": {
     "root": true,
